@@ -61,6 +61,19 @@ S3method("tfwindow","its")
 S3method("tbind","its")
 S3method("time","its")
 
+
+S3method("is.tframed","tis")
+##S3method("tfstart","tis")
+S3method("tfstart","tistframe")
+##S3method("tfend","tis")
+S3method("tfend","tistframe")
+S3method("tfTobs","tistframe")
+S3method("Tobs","tistframe")
+S3method("tframe","tis")
+S3method("tfSet","tistframe")
+S3method("tfwindow","tis")
+S3method("tbind","tis")
+
 #S3method("is.tframed","timeSeries")
 ##S3method("tfstart","timeSeries")
 S3method("tfstart","timeSeriestframe")
