@@ -1,5 +1,9 @@
 Changes in tframePlus version 2011.2-1
 
+   o	Added methods and tests for timeSeries series.
+
+   o	Added methods and tests for tis series (as used by package fame).
+
    o	Added methods and tests for xts series.
 
    o	Added a check that periods of the data correspond to periods of the
